# sora

./: .env  Cargo.toml  README.md  compose.yaml  exercice.txt
.sqlx/: query-558d8a5f18f242a9240117b915a8f697ec942d84cbd32e2891206060d24b87f1.json  query-7114125e77d9c1796c8bdb97638a9fa0c9b1bacfeec71a46f8e751058de50027.json  query-9c772608a753b1ffa2ca20724843020b5e6798ef6582f0882af2ded2f7fd0cdd.json  query-c6b37fc8c7116e4a7c9e4671cdbecfa52e2121def2eec61d8ebed0fec2375314.json  query-ce76bdfde3121f72930df43365f9690fd865ec32fca19c73e3c820a9fa860659.json  query-dda9ce927f2afb4f03e8eeb42e647abb350a1785b620af502cf3974bfd98286b.json  query-e9130ed885323fef6f5b9d442c0124f0cbeec8b199c74ef0c7c69be14192b0de.json
crates/cli/: Cargo.toml
crates/cli/src/: fixtures.rs  main.rs  persistence.rs  range.rs  show.rs  simulation.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  user.rs
crates/core/src/office/: address.rs  contract.rs  mod.rs  position.rs  subdivision.rs  surface.rs
crates/model/: Cargo.toml
crates/model/src/: contract.rs  id.rs  lib.rs  user.rs
crates/model/src/office/: mod.rs  validator.rs
migrations/: 20240814170733_create_default_tables.down.sql  20240814170733_create_default_tables.up.sql  20240821024353_postgres_point_to_plain_float.down.sql  20240821024353_postgres_point_to_plain_float.up.sql
src/models/: address.rs  mod.rs  office.rs  user.rs
src/models/office/: address.rs  mod.rs  position.rs  subdivision.rs  surface.rs
