[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
chrono = "0.4.38"
clap = "4.5.13"
color-eyre = "0.6.3"
thiserror = "1.0.63"
tokio = "1.39.2"
sqlx = { version = "0.8.0", default-features = false }
sora_core = { version = "*", path = "./crates/core/" }
uuid = "1.10.0"
rstest = "0.22.0"
