[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
chrono = "0.4.38"
clap = "4.5.13"
color-eyre = "0.6.3"
derive-getters = "0.5.0"
env_logger = "0.11.5"
fake = "2.9.2"
futures = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
rstest = "0.22.0"
sqlx = { version = "0.8.0", default-features = false }
thiserror = "1.0.63"
tokio = "1.39.2"
uuid = "1.10.0"
