[package]
name = "sora_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
sora_core = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rstest = { workspace = true }
