[package]
name = "sora_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
sora_core = { workspace = true }

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
workspace = true
features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"]

[dev-dependencies]
rstest = { workspace = true }
